adding npm run scripts

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <!-- You don't have to bundle, but it saves about 200 requests :) -->
-    <script src="dist/angular2-and-deps.js"></script>
+    <script src="dist/angular2.js"></script>
     <script>System.import('bootstrap/css/bootstrap.css!');</script>
 </head>
 <body>
